[package]
version = "0.1.0"
name = "succinctactoe-script"
edition = "2021"
default-run = "succinctactoe"

[[bin]]
name = "succinctactoe"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.1.7"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
succinctactoe-lib = { path = "../lib" }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "4.1.7"
